chore: update memory requirement

--- a/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
+++ b/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
@@ -129,7 +129,7 @@ cargo openvm setup --evm
 ```
 
 :::warning
-`cargo openvm setup --evm` requires very large amounts of computation and memory (~200 GB).
+`cargo openvm setup --evm` requires a large amount of computation and memory (~70 GB).
 :::
 
 <details>
