--- a/docs/vocs/docs/pages/book/writing-apps/overview.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/overview.mdx
@@ -84,7 +84,7 @@ cargo openvm setup [--evm]
 This will write the files necessary for STARK aggregation and EVM proving to `~/.openvm/`.
 
 :::warning
-This command requires very large amounts of computation and memory (~200 GB).
+This command requires a large amount of compute and memory (~70 GB).
 :::
 
 To generate and verify aggregated STARK or EVM proofs, you can run the following commands:
