--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -85,7 +85,7 @@ Note that `cargo openvm setup --evm` downloads auxiliary files for halo2 KZG par
 :::
 
 :::warning
-If the `$HOME` environment variable is not set, this command may fail. This command requires large amounts of compute and memory (~200 GB) and can take ~6mins on a `m6a.16xlarge` instance.
+If the `$HOME` environment variable is not set, this command may fail. This command requires a large amount of compute and memory (~70 GB) and can take ~7mins on a `m6a.16xlarge` instance.
 :::
 
 ## Proof Generation
@@ -113,5 +113,5 @@ The `app` subcommand generates an application-level proof, the `stark` command g
 :::warning
 The `stark` subcommand requires STARK aggregation key generation to have been run via
 `cargo openvm setup`, and the `evm` subcommand requires EVM key generation to have been run via
-`cargo openvm setup --evm`, which has very large compute and memory requirements (~200 GB).
+`cargo openvm setup --evm`, which has a large compute and memory requirement (~70 GB).
 :::
