--- a/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
+++ b/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
@@ -116,7 +116,6 @@ Once the proof is generated, you can verify it using the SDK as follows:
 // [!include ~/snippets/examples_sdk/sdk_stark.rs:verification]
 ```
 
-
 ## EVM Proof
 
 ### Setup
@@ -152,7 +151,7 @@ You can now run the aggregation keygen, proof, and verification functions for th
 ```
 
 :::warning
-The aggregation proving key `agg_pk` above is large. Avoid cloning it if possible.
+The halo2 aggregation proving key `agg_halo2.pk` used in the above example is large. Avoid cloning it if possible.
 :::
 
 Note that `DEFAULT_PARAMS_DIR` is the directory where Halo2 parameters are stored by the `cargo openvm setup --evm` CLI command. For more information on the setup process, see the `EVM Level` section of the [verify](/book/writing-apps/verifying-proofs) doc.
