--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -44,7 +44,9 @@ flag, it will also generate keys for the [static verifier wrapper](/specs/archit
 In addition to generating EVM proving and verification keys, `cargo openvm setup --evm` also
 generates a smart contract verifier for EVM chains. Upon a successful run, the command will write the files
 
-- `agg.pk`
+- `agg_stark.pk`
+- `agg_stark.vk`
+- `agg_halo2.pk`
 - `halo2/src/[OPENVM_VERSION]/Halo2Verifier.sol`
 - `halo2/src/[OPENVM_VERSION]/OpenVmHalo2Verifier.sol`
 - `halo2/src/[OPENVM_VERSION]/interfaces/IOpenVmHalo2Verifier.sol`
@@ -55,7 +57,8 @@ to `~/.openvm/`, where `~` is the directory specified by environment variable `$
 look for them in this directory. The smart contract verifier is also available via the
 [OpenVM Solidity SDK](/book/writing-apps/solidity-sdk) for released versions of OpenVM.
 
-The `agg.pk` contains all aggregation proving keys necessary for aggregating to a final EVM proof.
+The files `agg_stark.pk` and `agg_halo2.pk` are the STARK and Halo2 aggregation proving keys necessary to aggregate to a final EVM proof.
+The file `agg_stark.vk` is the STARK aggregation verification key.
 The `OpenVmHalo2Verifier.sol` file contains a Solidity contract to verify the final EVM proof. The contract is named `OpenVmHalo2Verifier` and it implements the `IOpenVmHalo2Verifier` interface.
 
 ```solidity [IOpenVmHalo2Verifier.sol]
