--- a/docs/vocs/docs/pages/book/getting-started/install.mdx
+++ b/docs/vocs/docs/pages/book/getting-started/install.mdx
@@ -59,8 +59,7 @@ cargo install --version 0.5.7 svm-rs
 export PATH="$HOME/.cargo/bin:$PATH"
 
 # Install solc 0.8.19
-svm install 0.8.19
-svm use 0.8.19
+svm install 0.8.19 
 ```
 
 ```bash [macOS]
@@ -134,10 +133,15 @@ sudo apt-get update
 
 sudo apt-get install -y cuda-drivers
 ```
+To check that CUDA drivers are installed, run
+```bash
+nvidia-smi
+```
 
 CUDA toolkit can be installed using the following command, assuming the keyring above has already been installed:
 ```bash [Ubuntu 24.04]
 sudo apt-get install -y cuda-toolkit
+export PATH="/usr/local/cuda/bin:$PATH"
 ```
 To check that CUDA toolkit is installed, run
 ```bash
@@ -148,7 +152,6 @@ The OpenVM CLI has been tested with CUDA toolkit version 12.8, and we recommend 
 
 Post-installation, ensure that your shell profile or startup script sets the proper [path variables for CUDA](https://docs.nvidia.com/cuda/cuda-installation-guide-linux/#environment-setup):
 ```bash
-PATH=/usr/local/cuda/bin${PATH:+:${PATH}}
 LD_LIBRARY_PATH=/usr/local/cuda/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
 ```
 Note that `/usr/local/cuda` is a symlink for the latest version of CUDA installed.
