chore: clean up headers

--- a/docs/vocs/docs/pages/book/getting-started/install.mdx
+++ b/docs/vocs/docs/pages/book/getting-started/install.mdx
@@ -4,9 +4,9 @@ To use OpenVM for generating proofs, you must install the OpenVM command line to
 either via Git URL or by cloning the repo and building from source manually. Prior to either
 approach, you should make sure you have installed the necessary [Prerequisites](#installation-prerequisites).
 
-Skip [below](#install-with-nvidia-gpu-support) for instructions on installing `cargo-openvm` with Nvidia GPU support.
+Skip [below](#installation-with-nvidia-gpu-support) for instructions on installing `cargo-openvm` with Nvidia GPU support.
 
-##
+## Installation
 
 ### Option 1: Install Via Git URL (Recommended)
 
@@ -91,7 +91,7 @@ svm use 0.8.19
 
 :::
 
-## Install with Nvidia GPU support
+## Installation with Nvidia GPU support
 
 It is possible to install the OpenVM CLI with support for Nvidia GPUs. This requires installation on a machine with an Nvidia GPU and associated drivers (see [Prerequisites (CUDA)](#installation-prerequisites-cuda))
 
