--- a/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
+++ b/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
@@ -81,21 +81,32 @@ OpenVM supports generating three types of proofs. The sections below describe ho
 
 ### Generating App Proofs
 
-After building and transpiling a program, you can then generate a proof. To do so, you need to commit your `VmExe`, generate an `AppProvingKey`, format your input into `StdIn`, and then generate a proof.
+After building and transpiling a program, you can then generate a proof. To do so, you need to convert your ELF into a `VmExe`, commit your `VmExe`, generate an `AppProvingKey`, format your input into `StdIn`, and then generate a proof.
+
+The SDK, however, combines the first few steps for you. Create a prover and pass in your input as a `StdIn` to generate an app proof.
 
 ```rust
-// [!include ~/snippets/examples_sdk/sdk_stark.rs:proof_generation]
+// [!include ~/snippets/examples_sdk/sdk_app.rs:proof_generation]
 ```
 
 For large guest programs, the program will be proved in multiple continuation segments and the returned `proof: ContinuationVmProof` object consists of multiple STARK proofs, one for each segment.
 
 ### Verifying App Proofs
 
-After generating a proof, you can verify it. To do so, you need your verifying key (which you can get from your `AppProvingKey`) and the output of your `generate_app_proof` call.
+After generating a proof, you can verify it. To do so, you need your verifying key (which you can get from your `AppProvingKey`) and the output of your `prove` call.
 
 ```rust
-// [!include ~/snippets/examples_sdk/sdk_stark.rs:verification]
+// [!include ~/snippets/examples_sdk/sdk_app.rs:verification]
 ```
+
+<details>
+<summary>To use the above verification, you may need additional dependencies. Click here to view.</summary>
+
+```rust
+// [!include ~/snippets/examples_sdk/sdk_app.rs:dependencies]
+```
+
+</details>
 
 ## STARK Proof
 
@@ -160,3 +171,21 @@ The halo2 aggregation proving key `agg_halo2.pk` used in the above example is la
 :::
 
 Note that `DEFAULT_PARAMS_DIR` is the directory where Halo2 parameters are stored by the `cargo openvm setup --evm` CLI command. For more information on the setup process, see the `EVM Level` section of the [verify](/book/writing-apps/verifying-proofs) doc.
+
+## Another Example: Using the Standard SDK
+
+For many program with complex arithmetic and/or cryptographic operations, the RISC-V instruction set alone may not be enough to achieve the performance desired. OpenVM provides many extensions to accelerate said operations, almost all of which are included inside the standard configuration.
+
+Take, for example, this toy program meant that checks if several guest library implementations of [`IntMod`](/book/acceleration-using-extensions/algebra#available-traits-and-methods) are fields by loosely checking if their moduli are prime.
+
+```rust
+// [!include ~/snippets/examples_sdk_guest/little/src/main.rs]
+```
+
+Simply initialize `Sdk` using `Sdk::standard()` and build, prove, and verify as above.
+
+```rust
+// [!include ~/snippets/examples_sdk/sdk_app.rs:init]
+```
+
+For more information on extensions and guest libraries, see [Acceleration Using Pre-Built Extensions](/book/acceleration-using-extensions/overview).
