--- a/docs/vocs/docs/pages/specs/architecture/distributed-proving.mdx
+++ b/docs/vocs/docs/pages/specs/architecture/distributed-proving.mdx
@@ -11,9 +11,16 @@ We give an overview of the distributed proving architecture and then provide fur
 Given a zkVM program with unbounded runtime size, we first perform _metered execution_ to segment the execution into _segments_ on a dedicated CPU machine.
 Minimal boundary metadata about each segment is sent to a dedicated machine to generate the App proof of that segment. The app proofs are proven in parallel on distributed prover machines. We will refer to each prover machine as consisting of a host and device, where the host consists of the CPU and RAM, and the device may be the multi-core CPU or the GPU depending on the proving backend.
 
-For each segment, we re-execute via _pure execution_ on the host CPU to recover the starting VM state at the beginning of the segment. Then the host performs _preflight execution_ up to the segment end, storing records of the execution into in-memory buffers. During _trace generation_, these buffers are copied to device memory and transformed on device into _trace matrices_ that match the specifications of the zkVM circuit frontend. The STARK backend then generates a cryptographic proof from the trace matrices, on device.
+For each segment, we re-execute via _pure execution_ on the host CPU to recover the starting VM state at the beginning of the segment. Then the host performs _preflight execution_ up to the segment end, storing records of the execution into in-memory buffers. During _trace generation_, these buffers are copied to device memory and transformed on device into _trace matrices_ that match the specifications of the zkVM circuit frontend. Execution is serial, while trace generation is massively parallelized. The STARK backend then generates a cryptographic proof from the trace matrices, on device.
 
 The above process generates all segment App proofs in parallel. After the App proofs are generated, they are _aggregated_ into a single proof via the aggregation tree described in the [continuation design](/specs/architecture/continuations). Each layer of the aggregation tree is proven in parallel, where each aggregation proof is treated as a single segment proof.
+
+## Modular Abstraction Layers
+
+The distributed proving architecture is designed to be extensible and composable via VM extensions. The architecture allows each VM extension to define their own implementations of execution and trace generation, while a unified hardware abstraction layer ensures:
+- Hardware-agnostic execution - The same execution implementation may be used across different hardware acceleration platforms (CPU or GPU).
+- Optimized parallelization - VM extensions can implement hardware-specific trace generation algorithms to maximize parallel computation efficiency.
+- Decoupled proving backend - The STARK backend prover implements the specifications of the proof system with optimized hardware acceleration while remaining independent of the VM extensions in use.
 
 We now give more details about the components described above.
 
