--- a/docs/vocs/docs/pages/book/getting-started/install.mdx
+++ b/docs/vocs/docs/pages/book/getting-started/install.mdx
@@ -91,7 +91,7 @@ svm use 0.8.19
 
 :::
 
-## Installation with Nvidia GPU support
+## Installation with Nvidia GPU Support
 
 It is possible to install the OpenVM CLI with support for Nvidia GPUs. This requires installation on a machine with an Nvidia GPU and associated drivers (see [Prerequisites (CUDA)](#installation-prerequisites-cuda))
 
@@ -170,7 +170,7 @@ Note that `/usr/local/cuda` is a symlink for the latest version of CUDA installe
 
 You are now ready to [install](#install-with-nvidia-gpu-support) the OpenVM CLI.
 
-## Install with experimental nightly features
+## Installation with Experimental Features
 
 For the best execution performance, the CLI may be installed with optimizations that utilize [experimental Rust features](https://github.com/rust-lang/rust/issues/112788). These optimizations may be enabled on top of the standard CPU installation as well as the Nvidia GPU installation. We provide installation instructions for both versions, assuming the prerequisites ([CPU](#installation-prerequisites), [GPU](#installation-prerequisites-cuda)) are already met.
 
@@ -186,10 +186,10 @@ Begin the installation:
 
 :::code-group
 ```bash [Without GPU]
-cargo +nightly-2025-08-19 install --locked --git https://github.com/openvm-org/openvm.git --tag v1.4.0-rc.8 --features tco cargo-openvm
+cargo +nightly-2025-08-19 install --locked --git https://github.com/openvm-org/openvm.git --tag v1.4.0-rc.9 --features tco cargo-openvm
 ```
 ```bash [Nvidia GPU]
-cargo +nightly-2025-08-19 install --locked --git https://github.com/openvm-org/openvm.git --tag v1.4.0-rc.8 --features tco,cuda cargo-openvm
+cargo +nightly-2025-08-19 install --locked --git https://github.com/openvm-org/openvm.git --tag v1.4.0-rc.9 --features tco,cuda cargo-openvm
 ```
 :::
 
@@ -204,7 +204,7 @@ cargo openvm --version
 To build from source, first clone the repository.
 
 ```bash
-git clone --branch v1.4.0-rc.8 --single-branch https://github.com/openvm-org/openvm.git
+git clone --branch v1.4.0-rc.9 --single-branch https://github.com/openvm-org/openvm.git
 cd openvm
 ```
 
